--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-tilt": "^0.1.4",
     "sass": "^1.30.0"
   }
 }
